Initial Template Commit

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "mona-lisa",
+  "name": "project_name",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "next build",
+    "db:generate": "drizzle-kit generate:pg",
+    "db:pull": "drizzle-kit introspect:pg",
+    "db:drop": "drizzle-kit drop:pg",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx ./src/server/db/seed.ts",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -15,8 +19,10 @@
     "@auth/drizzle-adapter": "^0.3.6",
     "@t3-oss/env-nextjs": "^0.7.1",
     "drizzle-orm": "^0.29.3",
+    "drizzle-zod": "^0.5.1",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "pg": "^8.11.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
-    "drizzle-kit": "^0.20.9",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "postcss": "^8.4.31",
