--- a/.env.example
+++ b/.env.example
@@ -10,15 +10,15 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/mona-lisa"
+DATABASE_URL="postgresql://PG_DATABASE_USER:PG_DATABASE_PASSWORD@localhost:5432/PG_DATABASE_NAME"
 
 # Next Auth
 # You can generate a new secret on the command line with:
 # openssl rand -base64 32
 # https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
+NEXTAUTH_SECRET="NEXT_AUTH_SECRET_PLACEHOLDER"
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# Next Auth Google Provider
+GOOGLE_CLIENT_ID="GOOGLE_CLIENT_ID_PLACEHOLDER"
+GOOGLE_CLIENT_SECRET="GOOGLE_CLIENT_SECRET_PLACEHOLDER"
